redid notifications websocket to follow how the messages websocket is setup. changed how the websocket worked. Simplified notifications feature.